--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</h1>
 
 		<nav id="ioMenu">
-			<figure id="showMenu" class="ioMenuMovil" onclick="displayMenu()"><img src="img/menu.png" alt=""></figure>
+			<figure id="showMaster" class="ioMenuMovil" onclick="displayMenu()"><img src="img/menu.png" alt=""></figure>
 			
 			<div id="card_menu">
 				<figure id="hideMenu" class="ioMenuMovil" onclick="displayMenu()"><img src="img/exit.png" alt=""></figure>
@@ -49,7 +49,7 @@
 			</div>
 		</nav>
 
-		<div id="prev_section" onclick="displaySection('prev')"><img src="iconos/icon-08.png" alt=""></div>
+		<div id="prev_color" onclick="displaySection('prev')"><img src="iconos/icon-08.png" alt=""></div>
 		<div id="next_section" onclick="displaySection('next')"><img src="iconos/icon-08.png" alt=""></div>
 	</header>
 	
