Cambio de nombre

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<a href="index.html">
 				<figure><img src="img/Logo.png" alt=""></figure>
 			</a>
-			<a href="index.html">Sonia Carretero</a>
+			<a href="index.html">Gonzalo Garrido</a>
 		</h1>
 
 		<nav id="ioMenu">
