Cambia el nombre al proyecto

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Sonia Carretero</title>
+	<title>Gonzalo Garrido</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<meta name="keywords" content="Disenio grafico, trabajos de disenio, servicios de disenio grafico">
